# blake3

./: CHANGELOG.md  mix.exs
config/: config.exs  test.exs
native/blake3/: Cargo.toml
native/blake3/src/: lib.rs
