[package]
name = "blake3"
version = "0.5.1"
authors = ["Thomas Jean <thomas.jean486@gmail.com>"]

[features]
default = ["blake3/default", "blake3/rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[lib]
name = "blake3"
path = "src/lib.rs"
crate_type = ["cdylib"]

[dependencies]
rustler = ">= 0.26.0"
bincode = "1.3.3"
blake3 = ">= 1.3.3"
